// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`regresión del perfil genérico (política única de hoy) > con_anticipos 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 38,
    "piso": null,
    "ponderado": 38,
  },
  "semaforos": {
    "autofinanciamiento": null,
    "calidad_ganancia": "healthy",
    "capital_de_trabajo": null,
    "ciclo_conversion_caja": null,
    "cobertura_intereses": "healthy",
    "deuda_bancaria_total": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "endeudamiento": null,
    "indice_inmovilizacion": null,
    "ktno": null,
    "liquidez_acida": "critical",
    "liquidez_corriente": "alert",
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_neto": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
  },
  "senales": [
    {
      "detalle": "Pasivo / patrimonio neto 3,71x.",
      "dimension": "endeudamiento",
      "id": "apalancamiento_alto",
      "piso": null,
      "severidad": "media",
      "titulo": "Apalancamiento elevado",
    },
    {
      "detalle": "Prueba ácida 0,58x: la liquidez depende de vender stock.",
      "dimension": "liquidez_solvencia",
      "id": "prueba_acida_baja",
      "piso": null,
      "severidad": "media",
      "titulo": "Prueba ácida baja",
    },
  ],
}
`;

exports[`regresión del perfil genérico (política única de hoy) > estresado 1`] = `
{
  "puntaje": {
    "categoria": "alto",
    "final": 65,
    "piso": {
      "motivo": "DSCR menor a 1: no repaga con su propio flujo",
      "piso": 65,
    },
    "ponderado": 38,
  },
  "semaforos": {
    "autofinanciamiento": null,
    "calidad_ganancia": "critical",
    "capital_de_trabajo": null,
    "ciclo_conversion_caja": null,
    "cobertura_intereses": "critical",
    "deuda_bancaria_total": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "critical",
    "deuda_financiera_pn": null,
    "deuda_neta_ebitda": "critical",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "critical",
    "ebitda": null,
    "endeudamiento": null,
    "indice_inmovilizacion": null,
    "ktno": null,
    "liquidez_acida": "critical",
    "liquidez_corriente": "critical",
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "alert",
    "margen_neto": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
  },
  "senales": [
    {
      "detalle": "DSCR -0,01x: el flujo (EBITDA − capex de mantenimiento − impuestos) no cubre intereses + capital del año.",
      "dimension": "endeudamiento",
      "id": "dscr_menor_1",
      "piso": 65,
      "severidad": "critica",
      "titulo": "DSCR menor a 1: no repaga con su propio flujo",
    },
    {
      "detalle": "Peor situación informada: 2 (seguimiento especial / riesgo bajo). Entidades: Banco Sur (sit. 2).",
      "dimension": "nosis_bcra",
      "id": "bcra_situacion_2",
      "piso": 55,
      "severidad": "alta",
      "titulo": "Situación 2 en BCRA",
    },
    {
      "detalle": "Hoy informa situación 2, pero registró situación 3 en los últimos 24 meses.",
      "dimension": "nosis_bcra",
      "id": "bcra_historial_24m",
      "piso": null,
      "severidad": "alta",
      "titulo": "Situación 3 en los últimos 24 meses",
    },
    {
      "detalle": "Score 480: pérdida esperada (proxy) 65/100.",
      "dimension": "nosis_bcra",
      "id": "score_nosis",
      "piso": null,
      "severidad": "alta",
      "titulo": "Score Nosis bajo",
    },
    {
      "detalle": "$ 50 miles informados en Nosis.",
      "dimension": "nosis_bcra",
      "id": "deuda_arca",
      "piso": null,
      "severidad": "alta",
      "titulo": "Deuda fiscal o previsional con ARCA",
    },
    {
      "detalle": "Balance $ 4.000 miles vs Nosis $ 6.000 miles (-33%). Posible deuda tomada después del cierre o no expuesta.",
      "dimension": "nosis_bcra",
      "id": "cruce_nosis",
      "piso": null,
      "severidad": "alta",
      "titulo": "Nosis informa más deuda que el balance",
    },
    {
      "detalle": "Deuda bancaria +129% con ventas -18%.",
      "dimension": "endeudamiento",
      "id": "deuda_sube_ventas_bajan",
      "piso": null,
      "severidad": "alta",
      "titulo": "La deuda crece mientras las ventas caen",
    },
    {
      "detalle": "Deuda financiera neta / EBITDA 4,33x (alerta por encima de 4,00x).",
      "dimension": "endeudamiento",
      "id": "deuda_neta_ebitda_alta",
      "piso": null,
      "severidad": "alta",
      "titulo": "Deuda neta / EBITDA elevada",
    },
    {
      "detalle": "Pasivo / patrimonio neto 6,00x.",
      "dimension": "endeudamiento",
      "id": "apalancamiento_alto",
      "piso": null,
      "severidad": "alta",
      "titulo": "Apalancamiento elevado",
    },
    {
      "detalle": "Deuda en moneda extranjera $ 1.500 miles (38% de la deuda bancaria) con exportaciones del 10% de las ventas.",
      "dimension": "endeudamiento",
      "id": "descalce_moneda",
      "piso": null,
      "severidad": "alta",
      "titulo": "Descalce de moneda",
    },
    {
      "detalle": "Liquidez corriente 0,92x: el pasivo de corto plazo supera al activo corriente (capital de trabajo $ -200 miles).",
      "dimension": "liquidez_solvencia",
      "id": "liquidez_corriente_baja",
      "piso": null,
      "severidad": "alta",
      "titulo": "Liquidez corriente menor a 1",
    },
    {
      "detalle": "Ventas -18% en pesos corrientes: con inflación, la caída real es mayor.",
      "dimension": "rentabilidad",
      "id": "ventas_caen",
      "piso": null,
      "severidad": "alta",
      "titulo": "Caída nominal de ventas",
    },
    {
      "detalle": "Resultado neto $ -300 miles (anterior $ -100 miles).",
      "dimension": "rentabilidad",
      "id": "resultado_negativo",
      "piso": null,
      "severidad": "alta",
      "titulo": "Pérdidas en los dos ejercicios",
    },
    {
      "detalle": "Ventas de 1 mes(es) posteriores al cierre -22% interanual (nominal).",
      "dimension": "ventas_post_balance",
      "id": "ventas_post_balance_caen",
      "piso": null,
      "severidad": "alta",
      "titulo": "Ventas post balance en caída",
    },
    {
      "detalle": "Salvedad por valuación de stock.",
      "dimension": "calidad_informacion",
      "id": "auditor_salvedades",
      "piso": null,
      "severidad": "alta",
      "titulo": "Opinión del auditor con salvedades",
    },
    {
      "detalle": "3 inconsistencia(s) contable(s): Ecuación contable no balancea: total_activo ≠ total_pasivo + patrimonio_neto; Subtotales no cuadran: total_activo ≠ activo_corriente + activo_no_corriente; Subtotales no cuadran: total_pasivo ≠ pasivo_corriente + pasivo_no_corriente.",
      "dimension": "calidad_informacion",
      "id": "balance_no_cuadra",
      "piso": null,
      "severidad": "alta",
      "titulo": "El balance extraído no cuadra",
    },
    {
      "detalle": "2 cheque(s) rechazado(s) por $ 30 miles (0,3% de las ventas anuales).",
      "dimension": "nosis_bcra",
      "id": "cheques_rechazados",
      "piso": null,
      "severidad": "media",
      "titulo": "Cheques rechazados",
    },
    {
      "detalle": "EBITDA / intereses 1,00x.",
      "dimension": "endeudamiento",
      "id": "cobertura_baja",
      "piso": null,
      "severidad": "media",
      "titulo": "Baja cobertura de intereses",
    },
    {
      "detalle": "88% de la deuda bancaria vence en los próximos 12 meses: riesgo de refinanciación.",
      "dimension": "endeudamiento",
      "id": "deuda_corto_plazo",
      "piso": null,
      "severidad": "media",
      "titulo": "Deuda concentrada en el corto plazo",
    },
    {
      "detalle": "Flujo operativo / EBITDA 33%: el EBITDA queda atrapado en capital de trabajo.",
      "dimension": "liquidez_solvencia",
      "id": "calidad_ganancia_baja",
      "piso": null,
      "severidad": "media",
      "titulo": "Baja calidad de la ganancia",
    },
    {
      "detalle": "Margen EBITDA de 20.8% a 10.0%.",
      "dimension": "rentabilidad",
      "id": "margen_ebitda_cae",
      "piso": null,
      "severidad": "media",
      "titulo": "Caída del margen EBITDA",
    },
    {
      "detalle": "RECPAM $ 400 miles frente a un resultado neto de $ -300 miles: separarlo para ver el resultado operativo genuino.",
      "dimension": "rentabilidad",
      "id": "recpam_relevante",
      "piso": null,
      "severidad": "media",
      "titulo": "El resultado depende del RECPAM",
    },
    {
      "detalle": "$ 2.000 miles asumidos post balance (50% de la deuda bancaria al cierre).",
      "dimension": "ventas_post_balance",
      "id": "deuda_post_balance",
      "piso": null,
      "severidad": "media",
      "titulo": "Deuda bancaria tomada después del cierre",
    },
    {
      "detalle": "Exposición a tipo de cambio: revisar si las ventas están dolarizadas.",
      "dimension": "ventas_post_balance",
      "id": "deuda_post_balance_usd",
      "piso": null,
      "severidad": "media",
      "titulo": "Deuda en dólares tomada después del cierre",
    },
    {
      "detalle": "Sin ajuste por inflación (RT 6): las comparaciones interanuales están distorsionadas.",
      "dimension": "calidad_informacion",
      "id": "sin_ajuste_inflacion",
      "piso": null,
      "severidad": "media",
      "titulo": "Balance no expresado en moneda homogénea",
    },
    {
      "detalle": "Tiene deuda fiscal o previsional refinanciada en planes de pago.",
      "dimension": "nosis_bcra",
      "id": "planes_arca",
      "piso": null,
      "severidad": "baja",
      "titulo": "Planes de pago vigentes con ARCA",
    },
  ],
}
`;

exports[`regresión del perfil genérico (política única de hoy) > quiebra_tecnica 1`] = `
{
  "puntaje": {
    "categoria": "critico",
    "final": 90,
    "piso": {
      "motivo": "Situación 4 en BCRA",
      "piso": 90,
    },
    "ponderado": 38,
  },
  "semaforos": {
    "autofinanciamiento": null,
    "calidad_ganancia": null,
    "capital_de_trabajo": null,
    "ciclo_conversion_caja": null,
    "cobertura_intereses": "critical",
    "deuda_bancaria_total": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "critical",
    "deuda_financiera_pn": null,
    "deuda_neta_ebitda": null,
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "critical",
    "ebitda": null,
    "endeudamiento": null,
    "indice_inmovilizacion": null,
    "ktno": null,
    "liquidez_acida": "healthy",
    "liquidez_corriente": "healthy",
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "critical",
    "margen_neto": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
  },
  "senales": [
    {
      "detalle": "Peor situación informada: 4 (alto riesgo de insolvencia / irrecuperable).",
      "dimension": "nosis_bcra",
      "id": "bcra_situacion_4",
      "piso": 90,
      "severidad": "critica",
      "titulo": "Situación 4 en BCRA",
    },
    {
      "detalle": "1 pedido(s) de quiebra informados.",
      "dimension": "nosis_bcra",
      "id": "pedido_quiebra",
      "piso": 80,
      "severidad": "critica",
      "titulo": "Pedidos de quiebra",
    },
    {
      "detalle": "EBITDA $ -2.100 miles y deuda bancaria $ 2.100 miles: sin capacidad operativa de repago.",
      "dimension": "endeudamiento",
      "id": "ebitda_negativo_con_deuda",
      "piso": 65,
      "severidad": "critica",
      "titulo": "EBITDA negativo con deuda bancaria",
    },
    {
      "detalle": "Patrimonio neto $ -500 miles: quiebra técnica.",
      "dimension": "liquidez_solvencia",
      "id": "patrimonio_negativo",
      "piso": 85,
      "severidad": "critica",
      "titulo": "Patrimonio neto negativo",
    },
    {
      "detalle": "Los estados contables no son confiables según el auditor.",
      "dimension": "calidad_informacion",
      "id": "auditor_adverso",
      "piso": 70,
      "severidad": "critica",
      "titulo": "Abstención de opinión del auditor",
    },
    {
      "detalle": "6 cheque(s) rechazado(s) por $ 400 miles (2,7% de las ventas anuales).",
      "dimension": "nosis_bcra",
      "id": "cheques_rechazados",
      "piso": 60,
      "severidad": "alta",
      "titulo": "Cheques rechazados",
    },
    {
      "detalle": "1 juicio(s) y 0 embargo(s) informados.",
      "dimension": "nosis_bcra",
      "id": "juicios_embargos",
      "piso": null,
      "severidad": "alta",
      "titulo": "Juicios o embargos",
    },
    {
      "detalle": "EBITDA / intereses -4,20x: el EBITDA no cubre los intereses.",
      "dimension": "endeudamiento",
      "id": "cobertura_baja",
      "piso": null,
      "severidad": "alta",
      "titulo": "Baja cobertura de intereses",
    },
    {
      "detalle": "2 inconsistencia(s) contable(s): Subtotales no cuadran: total_pasivo ≠ pasivo_corriente + pasivo_no_corriente; Patrimonio neto negativo (quiebra técnica): endeudamiento y ROE no son calculables.",
      "dimension": "calidad_informacion",
      "id": "balance_no_cuadra",
      "piso": null,
      "severidad": "alta",
      "titulo": "El balance extraído no cuadra",
    },
    {
      "detalle": "Resultado neto $ -2.500 miles.",
      "dimension": "rentabilidad",
      "id": "resultado_negativo",
      "piso": null,
      "severidad": "media",
      "titulo": "Resultado neto negativo",
    },
    {
      "detalle": "Margen EBITDA de 20.8% a -14.4%.",
      "dimension": "rentabilidad",
      "id": "margen_ebitda_cae",
      "piso": null,
      "severidad": "media",
      "titulo": "Caída del margen EBITDA",
    },
  ],
}
`;

exports[`regresión del perfil genérico (política única de hoy) > sano 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 38,
    "piso": null,
    "ponderado": 38,
  },
  "semaforos": {
    "autofinanciamiento": null,
    "calidad_ganancia": "healthy",
    "capital_de_trabajo": null,
    "ciclo_conversion_caja": null,
    "cobertura_intereses": "healthy",
    "deuda_bancaria_total": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "endeudamiento": null,
    "indice_inmovilizacion": null,
    "ktno": null,
    "liquidez_acida": "healthy",
    "liquidez_corriente": "healthy",
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_neto": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
  },
  "senales": [],
}
`;

exports[`regresión del perfil genérico (política única de hoy) > sin_comparativo_ni_nosis 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 38,
    "piso": null,
    "ponderado": 38,
  },
  "semaforos": {
    "autofinanciamiento": null,
    "calidad_ganancia": "healthy",
    "capital_de_trabajo": null,
    "ciclo_conversion_caja": null,
    "cobertura_intereses": "healthy",
    "deuda_bancaria_total": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "endeudamiento": null,
    "indice_inmovilizacion": null,
    "ktno": null,
    "liquidez_acida": "healthy",
    "liquidez_corriente": "healthy",
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_neto": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
  },
  "senales": [
    {
      "detalle": "No se recibió informe Nosis: no se puede validar la situación en el sistema financiero.",
      "dimension": "calidad_informacion",
      "id": "sin_nosis",
      "piso": null,
      "severidad": "media",
      "titulo": "Sin informe Nosis",
    },
    {
      "detalle": "No hay ejercicio anterior: no se pueden evaluar tendencias.",
      "dimension": "calidad_informacion",
      "id": "sin_comparativo",
      "piso": null,
      "severidad": "media",
      "titulo": "Sin ejercicio comparativo",
    },
  ],
}
`;

exports[`regresión del perfil genérico (política única de hoy) > stock_alto 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 38,
    "piso": null,
    "ponderado": 38,
  },
  "semaforos": {
    "autofinanciamiento": null,
    "calidad_ganancia": "critical",
    "capital_de_trabajo": null,
    "ciclo_conversion_caja": null,
    "cobertura_intereses": "healthy",
    "deuda_bancaria_total": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "alert",
    "ebitda": null,
    "endeudamiento": null,
    "indice_inmovilizacion": null,
    "ktno": null,
    "liquidez_acida": "critical",
    "liquidez_corriente": "healthy",
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_neto": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
  },
  "senales": [
    {
      "detalle": "DSCR 1,02x: margen escaso sobre el servicio de deuda (mínimo sano 1,25x).",
      "dimension": "endeudamiento",
      "id": "dscr_ajustado",
      "piso": null,
      "severidad": "alta",
      "titulo": "DSCR ajustado",
    },
    {
      "detalle": "90% de la deuda bancaria vence en los próximos 12 meses: riesgo de refinanciación.",
      "dimension": "endeudamiento",
      "id": "deuda_corto_plazo",
      "piso": null,
      "severidad": "media",
      "titulo": "Deuda concentrada en el corto plazo",
    },
    {
      "detalle": "Prueba ácida 0,48x: la liquidez depende de vender stock.",
      "dimension": "liquidez_solvencia",
      "id": "prueba_acida_baja",
      "piso": null,
      "severidad": "media",
      "titulo": "Prueba ácida baja",
    },
    {
      "detalle": "Pasa de 103 a 140 días: más necesidad de financiar capital de trabajo.",
      "dimension": "liquidez_solvencia",
      "id": "ciclo_caja_crece",
      "piso": null,
      "severidad": "media",
      "titulo": "Se alarga el ciclo de conversión de caja",
    },
    {
      "detalle": "Flujo operativo / EBITDA 26%: el EBITDA queda atrapado en capital de trabajo.",
      "dimension": "liquidez_solvencia",
      "id": "calidad_ganancia_baja",
      "piso": null,
      "severidad": "media",
      "titulo": "Baja calidad de la ganancia",
    },
  ],
}
`;
